# kotlin-security-mcp

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: vulnerable_sample.py
src/code_security_mcp/: server.py
src/code_security_mcp/adapters/: bandit_analyzer.py  bandit_report.py  detekt_analyzer.py  diff.py  eslint_analyzer.py  process.py  roslyn_analyzer.py  spotbugs_analyzer.py
src/code_security_mcp/application/: review_diff.py
src/kotlin_security_mcp/: server.py
src/kotlin_security_mcp/adapters/: pattern_catalog.py
src/kotlin_security_mcp/application/: suggest_secure_pattern.py
src/kotlin_security_mcp/domain/: patterns.py  ports.py
tests/: test_csharp.py  test_hardening.py  test_python.py  test_review_diff.py  test_routing.py  test_secure_pattern.py
tests/integration/: test_real_analyzers.py
