# ---------------------------------------------------------------------------
# Project metadata and build configuration.
#
# We use the modern "src layout" (code lives under ./src/code_security_mcp)
# so that tests always import the *installed* package, never accidental files
# from the working directory. This is the layout most professional Python
# projects use today.
# ---------------------------------------------------------------------------

[project]
name = "code-security-mcp"
version = "0.1.0"
description = "A security MCP server for AI coding agents: each language via its native analyzer — Kotlin (detekt), Java (SpotBugs+FindSecBugs), Python (Bandit) — plus diff review and secure patterns."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jasmin Guberinic" }]
keywords = [
    "mcp", "model-context-protocol", "security", "sast", "static-analysis",
    "kotlin", "java", "jvm", "python", "detekt", "spotbugs", "findsecbugs",
    "bandit", "spring-security", "ai-agents", "claude-code",
]

# Runtime dependencies. We keep this list deliberately tiny:
#   - "mcp" is the official Model Context Protocol SDK (the server framework).
# Everything else we need (subprocess, json, pathlib) is in the standard library.
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# Python security analysis: installs Bandit so Python scanning works with no
# extra setup (`pip install "code-security-mcp[python]"`).
python = [
    "bandit>=1.7",
]
# Tools needed only for development/testing, not at runtime.
dev = [
    "pytest>=8.0",
    "bandit>=1.7",
]

# This exposes a console command `code-security-mcp` that starts the server.
# MCP clients (Claude Code, Cursor) will launch the server through this entry point.
[project.scripts]
code-security-mcp = "code_security_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_security_mcp"]
